[package]
name = "hopter_proc_macro"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Procedural macro implementation for Hopter embedded operating system."
repository = "https://github.com/hopter-project/hopter-procedural-macro"
readme = false

[lib]
proc-macro = true

[features]
stm32f401 = []
stm32f405 = []
stm32f407 = []
stm32f410 = []
stm32f411 = []
stm32f412 = []
stm32f413 = []
stm32f427 = []
stm32f429 = []
stm32f446 = []
stm32f469 = []

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
